<resources>
    <string name="app_name">Student Records</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="entry_fragment_name">Entry </string>
    <string name="s_id_card_hint">Tap Student ID </string>
    <string name="s_name_hint">Student Name </string>
    <string name="s_pswd_hint">Password </string>
    <string name="s_email_hint">Email </string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="country_prompt">Enter country</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message">Message</string>
    <string name="action_settings">Settings</string>
    <string name="submit_success">!</string>

</resources>
