<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/s_id_card_hint"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_credit_card_black_24dp"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/s_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/s_name_hint"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp" />



    <EditText
        android:id="@+id/s_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/s_email_hint"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/s_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_security_black_24dp"
        android:hint="@string/s_pswd_hint"
        android:inputType="textPassword"
        android:padding="10dp" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Gender:" />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radio_male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_female" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/dpt_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dpt_spinner_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Department" />

        <Spinner
            android:id="@+id/dpt_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ses_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/spinner_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Session" />

        <Spinner
            android:id="@+id/ses_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt" />
    </LinearLayout>

    <Button
        android:id="@+id/s_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        />


</LinearLayout>